# anotherAttempt

./: .gitignore  1.bat  Deps.hs  Head.hs  HeadOld.hs  LinkExtractor.hs  LocalFP.hs  Mplus.hs  Path.hs  PeopleDB.hs  Settings.hs  Source.hs  TODO  URL.hs  aa.cabal  anotherAttempt.cabal
ClubviRu/: Build.hs  Date.hs  DepFile.hs  Listing.hs  Monad.hs  Path.hs  Resource.hs  Route.hs  Storage.hs  Time.hs  URIParser.hs
ClubviRu/Config/: Parser.hs  Site.hs
ClubviRu/Debug/: FindDepSource.hs  Helpers.hs  IO.hs  LinkExtractorTest.hs  MainpageTest.hs  RouteTest.hs  URITest.hs
ClubviRu/Pages/: Mainpage.hs
ClubviRu/Pages/Mainpage/: Head.hs  Imgs.hs  WidgetHead.hs  WidgetHeadImg.hs
Config/: Parser.hs  Site.hs  index  mainpageConfig
Debug/: Helpers.hs  IO.hs  MainpageTest.hs
Pages/: Mainpage.hs  Mainpage2.hs
Path/: Destination.hs  Source.hs
PlainTemplate/: Listing.hs  Monad.hs  NeedRebuild.hs  Parser.hs  Process.hs  Variable.hs
SiteGen/: DepDB.hs  DepRecord.hs  Deps.hs  IO.hs  LinkExtractor.hs  Main.hs  Process.hs  Time.hs
XmlTemplate/: Head.hs  Head2.hs  HeadOld.hs  Imgs.hs  Monad.hs  Page1.hs  Process.hs  WidgetHead.hs  WidgetHeadImg.hs
